Fixed shooting days overflow on mobile

--- a/components/ShootingDays/ShootingDays.module.css
+++ b/components/ShootingDays/ShootingDays.module.css
@@ -32,22 +32,11 @@
     justify-content: flex-start;
     align-items: center;
     gap: 0.5rem;
-    aspect-ratio: 6/1;
-}
-
-@media screen and (max-aspect-ratio: 13/9){
-    .container{
-        grid-template-columns: 1fr;
-    }
-    .entry{
-        aspect-ratio: 3/1;
-        flex-wrap: wrap;
-    }
 }
 
 .text{
     position: relative;
-    flex-grow: 1;
+    width: 100%;
     height: calc(100% - 1rem);
     padding: 0.5rem;
     display: flex;
@@ -73,9 +62,19 @@
     width: 50%;
 }
 
+@media screen and (min-aspect-ratio: 13/9){
+    .entry{
+        aspect-ratio: 6/1;
+    }
+}
+
 .info{
     position: relative;
     width: 100%;
+}
+
+.imageContainer{
+    display: flex;
 }
 
 .image{
@@ -96,6 +95,38 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media screen and (max-aspect-ratio: 13/9){
+    .container{
+        grid-template-columns: 1fr;
+    }
+    .entry{
+        flex-wrap: wrap;
+        width: 100%;
+    }
+    .text{
+        width: 100%;
+        height: auto;
+    }
+    .dateTime{
+        width: 100%;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        align-content: flex-start;
+        gap: 0;
+        margin-bottom: 1rem;
+    }
+    .date{
+        width: 100%;
+    }
+    .time{
+        width: 100%;
+    }
+    .imageContainer{
+        width: 100%;
+        justify-content: space-between;
+    }
 }
 
 .pagination{
